--- a/taskgo/src/App.css
+++ b/taskgo/src/App.css
@@ -4,7 +4,8 @@ form{
 }
 
 form input{
-  margin-bottom: 10px;
+  margin: 10px;
+  border: auto;
 }
 
 table{
@@ -12,138 +13,159 @@ table{
 }
 
 body {
-  background-color: rgb(255, 255, 255);
+	background: #fff;
+	color: #333;
+	font-family: Lato, sans-serif;
+	background-color:#e4e4e4;
 }
 
 .container {
-  width: 70%;
-  min-width: 50%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
+	display: block;
+	width: auto;
+	margin: 10px auto 100px;
+	background-color:#fff;
+	padding:0px 10px 10px 10px;
+	border-radius:10px
 }
 
-.kanban-heading {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-family: sans-serif;
+h2 {
+	text-align:center;
+	padding-top:10px;
+	margin-bottom:0px;
 }
 
-.kanban-board {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-family: sans-serif;
+ul {
+	margin: 0;
+	padding: 0;
 }
 
-.kanban-heading-text {
-  font-size: 1.8rem;
-  background-color: cyan;
-  padding: 0.8rem 1.7rem;
-  border-radius: 0.5rem;
-  margin: 1rem;
+li * {
+	float: left;
 }
 
-.kanban-block,
-.create-new-task-block {
-  padding: 0.6rem;
-  width: 30.5%;
-  min-width: 14rem;
-  min-height: 4.5rem;
-  border-radius: 0.3rem;
+li,
+h3 {
+	clear: both;
+	list-style: none;
 }
 
-#fazer {
-  background-color: lightblue;
+input,
+button {
+	outline: none;
 }
 
-#fazendo {
-  background-color: orange;
-  /* display: none; */
+button {
+	background: none;
+	border: 0px;
+	color: #888;
+	font-size: 15px;
+	width: 60px;
+	margin: 10px 0 0;
+	font-family: Lato, sans-serif;
+	cursor: pointer;
 }
 
-#feito {
-  background-color: #018b01;
-  /* display: none; */
+button:hover {
+	color: #333;
 }
 
-#expirado{
-  background-color: red;
+
+/* Heading */
+
+h3,
+label[for='new-task'] {
+	color: #333;
+	font-weight: 700;
+	font-size: 15px;
+	border-bottom: 2px solid #333;
+	padding: 20px 0 10px;
+	margin: 0;
+	text-transform: uppercase;
 }
 
-.task {
-  background-color: white;
-  margin: 0.2rem 0rem 0.3rem 0rem;
-  border: 0.1rem solid black;
-  border-radius: 0.2rem;
-  padding: 0.5rem 0.2rem 0.5rem 2rem;
+input[type="text"] {
+	margin: 0;
+	font-size: 18px;
+	line-height: 18px;
+	height: 18px;
+	padding: 10px;
+	border: 2px solid #ddd;
+	background: #fff;
+	border-radius: 6px;
+	font-family: Lato, sans-serif;
+	color: #888;
 }
 
-#task-button {
-  margin: 0.2rem 0rem 0.1rem 0rem;
-  background-color: white;
-  border-radius: 0.2rem;
-  width: 100%;
-  border: 0.25rem solid black;
-  padding: 0.5rem 2.7rem;
-  border-radius: 0.3rem;
-  font-size: 1rem;
+input[type="text"]:focus {
+	color: #333;
 }
 
-.create-new-task-block {
-  display: none;
-  /* display: flex; */
-  background: #f8f8f8;
-  width: 64.4%;
-  flex-direction: column;
+
+/* New Task */
+
+label[for='new-task'] {
+	display: block;
+	margin: 0 0 20px;
 }
 
-.form-row {
-  display: flex;
-  flex-direction: row;
-  margin: 0.2rem;
+input#new-task {
+	float: left;
+	width: 318px;
 }
 
-.form-row-label {
-  width: 15%;
-  padding: 0.2rem;
-  padding-right: 0.5rem;
-  border: 0.1rem solid black;
-  border-right: 0;
-  border-radius: 0.2rem 0rem 0rem 0.2rem;
+p > button:hover {
+	color: #0FC57C;
 }
 
-.form-row-input {
-  border: 0.1rem solid black;
-  border-radius: 0rem 0.2rem 0.2rem 0rem;
-  width: 85%;
+
+/* Task list */
+
+li {
+	overflow: hidden;
+	padding: 20px 0;
+	border-bottom: 1px solid #eee;
 }
 
-textarea {
-  resize: none;
+li > input[type="checkbox"] {
+	margin: 0 10px;
+	position: relative;
+	top: 15px;
 }
 
-.form-row-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0.2rem;
+li > label {
+	font-size: 18px;
+	line-height: 40px;
+	width: 237px;
+	padding: 0 0 0 11px;
 }
 
-#edit-button,
-#save-button,
-#cancel-button {
-  margin: 0.2rem 0rem 0.1rem 0rem;
-  background-color: white;
-  border-radius: 0.2rem;
-  width: 49.2%;
-  border: 0.25rem solid black;
-  padding: 0.5rem 2.7rem;
-  border-radius: 0.3rem;
-  font-size: 1rem;
+li > input[type="text"] {
+	width: 226px;
 }
 
-#edit-button {
-  display: none;
+li > .delete:hover {
+	color: #CF2323;
+}
+
+
+/* Completed */
+
+#completed-tasks label {
+	text-decoration: line-through;
+	color: #888;
+}
+
+
+/* Edit Task */
+
+ul li input[type=text] {
+	display: none;
+}
+
+ul li.editMode input[type=text] {
+	display: block;
+}
+
+ul li.editMode label {
+	display: none;
 }
